--- a/Pipfile
+++ b/Pipfile
@@ -4,14 +4,13 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-numpy = "*"
-pandas = "*"
-matplotlib = "*"
+flask = "*"
+scraper = "*"
 requests = "*"
 bs4 = "*"
 
 [dev-packages]
+ipykernel = "*"
 
 [requires]
 python_version = "3.9"
-python_full_version = "3.9.6"
