--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "nanitabe",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "v21.1.0",
+    "npm": "10.2.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -18,10 +22,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "concurrently \"npm start\" \"python3 scraping/server.py\" \"go build router.go && ./router\""
   },
   "eslintConfig": {
     "extends": [
@@ -40,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2"
   }
 }
