--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "concurrently \"npm start\" \"python3 scraping/server.py\" \"go build router.go && ./router\""
+    "start": "node src/index.tsx"
   },
   "eslintConfig": {
     "extends": [
